// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`params.translator translateToBodyParameter given x-examples should translate to body parameter with multiple examples 1`] = `
Object {
  "contents": Array [
    Object {
      "examples": Array [
        Object {
          "id": Any<String>,
          "key": "example-1",
          "value": Object {
            "hello": "world",
          },
        },
        Object {
          "id": Any<String>,
          "key": "example-2",
          "value": Object {
            "foo": "bar",
          },
        },
      ],
      "id": Any<String>,
      "mediaType": "*",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "format": "e-mail",
        "x-stoplight-id": "#",
      },
    },
  ],
  "description": "descr",
  "id": Any<String>,
  "required": true,
}
`;

exports[`params.translator translateToBodyParameter should translate to body parameter 1`] = `
Object {
  "contents": Array [
    Object {
      "examples": Array [],
      "id": Any<String>,
      "mediaType": "*",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "format": "e-mail",
        "x-stoplight-id": Any<String>,
      },
    },
  ],
  "description": "descr",
  "id": Any<String>,
  "required": true,
}
`;

exports[`params.translator translateToHeaderParam should translate header param 1`] = `
Object {
  "deprecated": false,
  "description": "desc",
  "id": Any<String>,
  "name": "name",
  "required": true,
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "minimum": 12,
    "type": "integer",
    "x-stoplight-id": "#",
  },
  "style": "simple",
}
`;

exports[`params.translator translateToHeaderParams should translate empty dictionary to empty array 1`] = `Array []`;

exports[`params.translator translateToHeaderParams should translate to multiple header params 1`] = `
Array [
  Object {
    "deprecated": false,
    "description": "a description",
    "id": "5d95ea50",
    "name": "header-name",
    "required": false,
    "schema": Object {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "type": "string",
      "x-stoplight-id": "#",
    },
    "style": "simple",
  },
  Object {
    "deprecated": false,
    "description": "another description",
    "id": "4cd48437",
    "name": "plain-tex",
    "required": false,
    "schema": Object {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "type": "string",
      "x-stoplight-id": "#",
    },
    "style": "simple",
  },
]
`;

exports[`params.translator translateToHeaderParams should translate to simple header param 1`] = `
Array [
  Object {
    "deprecated": false,
    "description": "a description",
    "id": "5d95ea50",
    "name": "header-name",
    "required": false,
    "schema": Object {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "type": "string",
      "x-stoplight-id": "#",
    },
    "style": "simple",
  },
]
`;

exports[`params.translator translateToPathParameter should translate 1`] = `
Object {
  "deprecated": false,
  "description": "descr",
  "id": Any<String>,
  "name": "name",
  "required": true,
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "type": "string",
    "x-stoplight-id": Any<String>,
  },
  "style": "simple",
}
`;
